# tiger-in-c

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  a.out  absyn.c  absyn.h  assem.c  assem.h  canon.c  canon.h  codegen.h  color.c  color.h  compile_commands.json  driver.c  env.c  env.h  errormsg.c  errormsg.h  escape.c  escape.h  flowgraph.c  flowgraph.h  frame.h  graph.c  graph.h  lex.yy.c  liveness.c  liveness.h  main.c  makefile  maxargs.c  parse.c  parsetest.c  prabsyn.c  prabsyn.h  printtree.c  printtree.h  (+34 more)
sample/: GC.tig  GC1.tig  GC2.tig  libfunc.tig  merge.tig  qsort.tig  queen.tig
src/: CMakeLists.txt  assem.c  assem.h  canon.c  codegen.h  color.c  color.h  env.c  env.h  errormsg.c  errormsg.h  escape.h  flowgraph.c  flowgraph.h  frame.h  graph.c  liveness.c  liveness.h  main.c  parse.c  parse.h  prabsyn.c  printtree.c  printtree.h  riscv_codegen.c  riscv_frame.c  semant.c  set.c  set.h  symbol.c  symbol.h  table.c  table.h  temp.c  temp.h  translate.c  translate.h  tree.c  tree.h  types.c  (+3 more)
test/: CMakeLists.txt  color_test.cpp  env_test.cpp  run_xv6.sh  test_in_xv6.cpp  test_utils.h
test/frame/: frame_test.cpp  test1.tig  test2.tig
test/semant/: semant_test.cpp  test1.tig
test/translate/: test1.tig  translate_test.cpp
